--- a/admin/Client/Pages/UserManagement/ResetPassword.razor
+++ b/admin/Client/Pages/UserManagement/ResetPassword.razor
@@ -52,7 +52,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var user = await _client.GetFromJsonAsync<UserInputModel>($"/api/users/{Id}");
+        var user = await _client.GetFromJsonAsync<UserInputModel>($"/api/users/{Id}?companyId={_stateContainer.Company.Id}");
         
         
 
@@ -68,7 +68,7 @@
 
     private async Task OnValidSubmit() 
     {
-        var response = await _client.PutAsJsonAsync($"/api/users/password/reset/{Id}", UserInputModel);
+        var response = await _client.PutAsJsonAsync($"/api/users/password/reset/{Id}?companyId={_stateContainer.Company.Id}", UserInputModel);
 
         if(response.IsSuccessStatusCode)
         {
