--- a/admin/Client/_Imports.razor
+++ b/admin/Client/_Imports.razor
@@ -16,3 +16,6 @@
 @using Application.Model.ProductManagement
 @using Application.Model.Work
 @using Application.Client.Components
+
+
+@inject StateContainer _stateContainer
