--- a/admin/Client/Pages/UserManagement/EditUser.razor
+++ b/admin/Client/Pages/UserManagement/EditUser.razor
@@ -4,7 +4,6 @@
 @inject IJSRuntime _jsRuntime
 @inject HttpClient _client
 @inject NavigationManager _navigationManager
-@attribute [Authorize(Roles = $"CODGOwner, Admin")]
 
 <PageTitle>Edit User</PageTitle>
 
@@ -89,7 +88,7 @@
         options = Roles.Where(x => userRoles.Any(y => y.RoleId == x.Id)).Select(x => x.Name);
 
 
-        var user = await _client.GetFromJsonAsync<UserInputModel>($"/api/users/{Id}");
+        var user = await _client.GetFromJsonAsync<UserInputModel>($"/api/users/{Id}?companyId={_stateContainer.Company.Id}");
         
         
 
@@ -120,7 +119,7 @@
 
     private async Task OnValidSubmit() 
     {
-        var response = await _client.PutAsJsonAsync($"/api/users/{Id}", UserInputModel);
+        var response = await _client.PutAsJsonAsync($"/api/users/{Id}?companyId={_stateContainer.Company.Id}", UserInputModel);
 
         if(response.IsSuccessStatusCode)
         {
