--- a/admin/Client/Shared/NavMenu.razor
+++ b/admin/Client/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div class="top-row ps-3 navbar navbar-white">
+<div class="top-row ps-3 navbar navbar-white">
     <div class="container-fluid">
         @* <a class="navbar-brand" href="">Application</a> *@
         <div class="d-flex text-center" ><div class="w-32 h-32 d-flex text-center justify-content-center bg-dark text-light rounded p-1 me-2">
@@ -52,7 +52,7 @@
                 </Authorized>
             </AuthorizeView>
 
-            <AuthorizeView Roles='@($"{_stateContainer.Company.Code}_Owner, {_stateContainer.Company.Code}_Admin, {_stateContainer.Company.Id}_ReceivingAdmin")'>
+            <AuthorizeView Roles='@($"{_stateContainer.Company.Code}_Owner, {_stateContainer.Company.Code}_Admin, {_stateContainer.Company.Code}_ReceivingAdmin")'>
                 <Authorized>
                     <div class="nav-item px-3">
                         <NavLink class="nav-link" href="works/custom/headers">
