model: update item model

--- a/admin/Client/_Imports.razor
+++ b/admin/Client/_Imports.razor
@@ -15,7 +15,9 @@
 @using Application.Model.Org
 @using Application.Model.ProductManagement
 @using Application.Model.Work
+@using Model.Enum
 @using Application.Client.Components
+
 
 
 @inject StateContainer _stateContainer
