--- a/client/Client/Pages/Works/Custom.razor
+++ b/client/Client/Pages/Works/Custom.razor
@@ -92,7 +92,7 @@ else {
           </div>
         </div>
 
-        <div class="fixed-bottom p-3 text-center d-flex justify-content-between">
+        <div class="fixed-bottom px-3 py-2 text-center d-flex justify-content-between bg-white">
     
             <a href="/works/custom" type="button" class="btn btn-secondary">Cancel</a>
 
@@ -107,13 +107,17 @@ else {
 
 
 
-    <h4 class="pb-3">Received Items</h4>
+    <h4 class="pb-3 mt-5">Received Items</h4>
 
-    <div class="list-group col-sm-6">
+    <div class="col-sm-6 mb-3">
+      <input type="text" class="form-control" id="barcode" placeholder="Search barcode" @bind="@SearchBarcode"  @bind:event="oninput" required="false" />
+    </div>
 
-        @if(CustomWorkLines is not null)
+    <div class="list-group col-sm-6 mb-16">
+
+        @if(CustomWorkLinesFiltered is not null)
         {
-            @foreach (var line in CustomWorkLines)
+            @foreach (var line in CustomWorkLinesFiltered)
             {
                 <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true" @onclick="@(() => DeleteLoadLine(line))">
                   <div class="d-flex gap-2 w-100 justify-content-between">
@@ -139,9 +143,11 @@ else {
 @code
 {
     [Parameter] public string workHeaderId { get; set; }
+    public string SearchBarcode { get; set; }
     public CustomWorkHeader CustomWorkHeader = new CustomWorkHeader();
     public List<CustomWorkHeader> CustomWorkHeaders { get; set; }
     public List<CustomWorkLine> CustomWorkLines = new List<CustomWorkLine>();
+    public List<CustomWorkLine> CustomWorkLinesFiltered => !String.IsNullOrEmpty(SearchBarcode) ? CustomWorkLines.Where(x => x.BarcodeNo.Contains(SearchBarcode)).ToList() : CustomWorkLines;
     public CustomWorkLine CustomWorkLine = new CustomWorkLine();
 
 
